# magicFolder

./: .gitignore  CMakeLists.txt  README.md  build.sh  mount.sh  test.sh  test_batch.sh  test_phase3.sh  unmount.sh
classifier/: brain.py  llm.py  ocr.py  rag.py  requirements.txt  test_brain.py  test_llm_manual.py  test_ocr_real.py  test_rag.py
mcp_server/: server.py
src/: magic_folder.cpp
